<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logbook"
            android:icon="@drawable/ic_book_open_page_variant_black_24dp"
            android:title="@string/device_log_book" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_help" />
    </group>

    <item android:title="@string/action_whoarewe">
        <menu>
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_assignment_ind_black_24dp"
                android:title="@string/action_aboutus" />
        </menu>
    </item>

</menu>
